tests/ui/mismatched_types/int-float-type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/int-float-type-mismatch.rs:8:9
   |
LL |     let mut x
   |         ----- expected due to the type of this binding
LL |         =
LL |         2;
   |         - expected due to this value
LL |     x = 5.0;
   |         ^^^ expected integer, found floating-point number

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
